fix bug scrollbar

--- a/client/src/admin/styles/admin.scss
+++ b/client/src/admin/styles/admin.scss
@@ -9,8 +9,6 @@
 @import "./components/md/drawer.scss";
 
 .admin {
-  min-height: 100vh;
-  width: 100%;
   .md-app {
     min-height: 100vh;
     width: 100%;
